ingress-prac/02-app2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app2
  namespace: roboshop
  labels:
    app: app2
spec:
  containers:
    - name: app2-container
      image: nginx:latest
      ports:
        - containerPort: 80
      command:
        - /bin/sh
        - -c
      args:
        - |
          # Truncate the existing default page
          > /usr/share/nginx/html/index.html

          # Write our own HTML page
          cat <<EOF > /usr/share/nginx/html/index.html
          <!DOCTYPE html>
          <html>
          <head>
              <title>app2</title>
          </head>
          <body style="font-family: Arial; text-align:center; margin-top:100px;">
              <h1>This is from app2</h1>
          </body>
          </html>
          EOF

          # Start Nginx in the foreground
          nginx -g "daemon off;"
