ingress-prac/01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: roboshop-ingress

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:854481201869:certificate/3f6f0374-dbb7-4837-bfa5-471f9c96debb

    alb.ingress.kubernetes.io/ssl-redirect: "443"

    alb.ingress.kubernetes.io/group.name: roboshop

spec:

  ingressClassName: alb

  rules:

  - host: app1.kriiishmatic.fun

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: app1

            port:

              number: 80

  - host: app2.kriiishmatic.fun

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: app2

            port:

              number: 80
