ingress-prac/02-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: roboshop

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
      - name: nginx

        image: nginx:latest

        ports:
        - containerPort: 80

        command:
        - /bin/sh
        - -c

        args:
        - |
          cat <<EOF > /usr/share/nginx/html/index.html
          <!DOCTYPE html>
          <html>
          <body style="font-family:Arial;text-align:center;margin-top:100px;">
          <h1>This is from App1</h1>
          </body>
          </html>
          EOF

          nginx -g "daemon off;"


---
apiVersion: v1
kind: Service

metadata:
  name: app1
  namespace: roboshop

spec:

  selector:
    app: app1

  ports:

  - port: 80

    targetPort: 80

  type: ClusterIP
---
apiVersion: v1
kind: Service

metadata:
  name: app1
  namespace: roboshop

spec:

  selector:
    app: app1

  ports:

  - port: 80

    targetPort: 80

  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: app1-ingress

  namespace: roboshop

  annotations:

    alb.ingress.kubernetes.io/group.name: roboshop

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:854481201869:certificate/xxxxxxxx

    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:

  ingressClassName: alb

  rules:

  - host: app1.kriiishmatic.fun

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: app1

            port:

              number: 80
